# code-sign

./: README.md  optee.py  optee_new.py  test_flash_gen.py
cst_signing_simplified/: README.md  sign.py  sign_corrected.py
cst_signing_simplified/pkcs11_bridge/: CMakeLists.txt  build_bridge.sh  exports.ldscript  hsm_pkcs11.c  hsm_pkcs11_config.json.example  pkcs11_types.h
scripts/: bootstrap_pkcs11_deps.sh
